--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+      working-directory: /home/runner/work/workout-recording-system/backend
     - run: npm run build --if-present
+      working-directory: /home/runner/work/workout-recording-system/backend
     - run: npm test
+      working-directory: /home/runner/work/workout-recording-system/backend
