--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,18 +17,17 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set working directory
+      run: cd /home/runner/work/workout-recording-system/backend
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-      working-directory: /home/runner/work/workout-recording-system/backend
     - run: npm run build --if-present
-      working-directory: /home/runner/work/workout-recording-system/backend
     - run: npm test
-      working-directory: /home/runner/work/workout-recording-system/backend
+
