--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,35 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
+---
 name: Node.js CI
-
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
+    branches:
+      - main
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: $({matrix.os})
     defaults:
-       run:
-         working-directory: ./backend/
+      run:
+        working-directory: ./backend/
     strategy:
       matrix:
-        node-version: [20.x]
-
+        node-version:
+          - 20.x
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macOS-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: './backend/package-lock.json'
-    - run: npm install    
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: npm
+          cache-dependency-path: ./backend/package-lock.json
+      - run: npm install
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
