--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,8 @@ jobs:
         working-directory: ./backend/
     strategy:
       matrix:
-        node-version:
-          - 20.x
-        os:
-          - ubuntu-latest
-          - windows-latest
-          - macOS-latest
+        node-version: [20.x]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
