--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,12 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Build and Push Docker Image
-      uses: docker/build-push-action@v5
+      run: docker-compose up --build
+    - uses: docker/login-action@v1
       with:
-        image: kaveez/demo-workout
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: Push Docker Images to Docker Hub
+      run: docker push kaveez/demo-workout
+
