--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,9 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Build and Push Docker Image
-      run: docker-compose up --build
-    - uses: docker/login-action@v1
+      run: docker-compose up -d --build
+    - uses: docker/login-action@v3
       with:
-        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
