--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,5 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: docker push kaveez/demo-workout
+      run: docker push kaveez/demo-workout:latest
 
