--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,9 @@ jobs:
       run: docker-compose up -d --build
     - uses: docker/login-action@v3
       with:
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: docker push kaveez/demo-workout:latest
+      run: docker push ***:demo-workout:latest
 
