--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,11 @@ jobs:
     - run: npm test
     - name: Build and Push Docker Image
       run: docker-compose up -d --build
-    - uses: docker/login-action@v3
+    - uses: docker/login-action@v1
       with:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: docker push ***:demo-workout:latest
+      run: docker push docker.io/***:demo-workout:latest
 
