--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,12 +29,16 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Build and Push Docker Image
-      run: docker-compose up -d --build
+      run: |
+        docker-compose -f docker-compose.yml build server
+        docker tag your_image_name:latest docker.io/kaveez/demoworkout:latest
+        docker push docker.io/kaveez/demoworkout:latest
+        
     - uses: docker/login-action@v1
       with:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: docker push docker.io/kaveez/demo-workout:latest
+      run: docker-compose -f docker-compose.yml push
 
