--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
     - run: npm test
     - name: Build and Push Docker Image
       run: |
-        docker-compose -f docker-compose.yaml build server
-        docker tag your_image_name:latest docker.io/kaveez/demoworkout:latest
-        docker push docker.io/kaveez/demoworkout:latest
+        docker-compose --build
+        docker workout-recording-system:latest docker.io/kaveez/demo-workout:latest
+        
         
     - uses: docker/login-action@v1
       with:
@@ -40,5 +40,5 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: docker-compose -f docker-compose.yaml push
+      run: docker push docker.io/kaveez/demo-workout:latest
 
