--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,6 @@ jobs:
     - name: Build and Push Docker Image
       run: |
         docker-compose --build
-        docker workout-recording-system:latest docker.io/kaveez/demo-workout:latest
-        
         
     - uses: docker/login-action@v1
       with:
@@ -40,5 +38,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: docker push docker.io/kaveez/demo-workout:latest
+      run: |
+        docker tag workout-recording-system:latest docker.io/kaveez/demo-workout:latest
+        docker push docker.io/kaveez/demo-workout:latest
 
