--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm test
     - name: Build and Push Docker Image
       run: |
-        docker-compose up --build
+        docker-compose up -d --build
         
     - uses: docker/login-action@v1
       with:
