--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
+env:
+  TEST_TAG: user/app:test
+  LATEST_TAG: user/app:latest
+  
+
+    
 jobs:
   build:
 
@@ -29,8 +36,13 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Build and Push Docker Image
-      run: |
-        docker-compose up -d --build
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        load: true
+        tags: ${{ env.TEST_TAG }}
+      # run: |
+      #   docker-compose up -d --build
         
     - uses: docker/login-action@v1
       with:
@@ -38,7 +50,13 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push Docker Images to Docker Hub
-      run: |
-        docker tag workout-recording-system:latest docker.io/kaveez/demo-workout:latest
-        docker push docker.io/kaveez/demo-workout:latest
+      uses: docker/build-push-action@v5
+      with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ env.LATEST_TAG }}
+      # run: |
+      #   docker tag workout-recording-system:latest docker.io/kaveez/demo-workout:latest
+      #   docker push docker.io/kaveez/demo-workout:latest
 
