--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,15 +28,28 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - name: Build and Push Docker Image
-      run: |
-       docker-compose up -d --build
+    # - name: Build and Push Docker Image
+    #   run: |
+    #    docker-compose up -d --build
         
-    - uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Push Docker Images to Docker Hub
-      run: |
-        docker push docker.io/kaveez/demo-workout:latest
+    # - uses: docker/login-action@v1
+    #   with:
+    #     registry: docker.io
+    #     username: ${{ secrets.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: Push Docker Images to Docker Hub
+    #   run: |
+    #     docker push docker.io/kaveez/demo-workout:latest
+    - name: Login to Docker Hub
+    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
+    - name: Build and push backend image
+    working-directory: backend
+    run: |
+      docker build -t ${{ secrets.DOCKER_USERNAME }}/backendimage .
+      docker push ${{ secrets.DOCKER_USERNAME }}/backendimage
+    - name: Build and push frontend image
+    working-directory: frontend
+    run: |
+      docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend .
+      docker push ${{ secrets.DOCKER_USERNAME }}/frontend
+
