--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,55 +1,37 @@
-name: Node.js CI
+name: Docker CD
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-  
-    
+    branches: ["main"]
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
     defaults:
-       run:
-         working-directory: ./backend/
+      run:
+        working-directory: ./backend/
     strategy:
       matrix:
         node-version: [20.x]
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: './backend/package-lock.json'
-    - run: npm install    
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-    # - name: Build and Push Docker Image
-    #   run: |
-    #    docker-compose up -d --build
-        
-    # - uses: docker/login-action@v1
-    #   with:
-    #     registry: docker.io
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
-    # - name: Push Docker Images to Docker Hub
-    #   run: |
-    #     docker push docker.io/kaveez/demo-workout:latest
-    - name: Login to Docker Hub
-    - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
-    - name: Build and push backend image
-    working-directory: backend
-    run: |
-      docker build -t ${{ secrets.DOCKER_USERNAME }}/backendimage .
-      docker push ${{ secrets.DOCKER_USERNAME }}/backendimage
-    - name: Build and push frontend image
-    working-directory: frontend
-    run: |
-      docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend .
-      docker push ${{ secrets.DOCKER_USERNAME }}/frontend
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+          cache-dependency-path: "./backend/package-lock.json"
 
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
+      - name: Build and push backend image
+        working-directory: backend
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/backendimage .
+          docker push ${{ secrets.DOCKER_USERNAME }}/backendimage
+      - name: Build and push frontend image
+        working-directory: frontend
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend .
+          docker push ${{ secrets.DOCKER_USERNAME }}/frontend
