--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
 
       - name: Build and push backend image
-        working-directory: ../backend
+        working-directory: backend
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/backendimage .
           docker push ${{ secrets.DOCKER_USERNAME }}/backendimage
