--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,13 +4,13 @@ FROM node:20-alpine
 # Set the working directory in the container
 WORKDIR /app
 # Copy backend package.json and package-lock.json
-COPY backend/package*.json ./
+COPY /package*.json ./
 
 # Install backend dependencies
 RUN npm install
 
 # Copy backend code to the container
-COPY backend/ .
+COPY . .
 
 
 # Expose port for the backend (assuming your backend uses port 4000)
