--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,13 +4,13 @@ FROM node:20-alpine
 # Set the working directory in the container
 WORKDIR /app
 # Copy backend package.json and package-lock.json
-COPY frontend/package*.json ./
+COPY /package*.json ./
 
 # Install backend dependencies
 RUN npm install
 
 # Copy backend code to the container
-COPY frontend/ .
+COPY . .
 
 # Expose port for the backend (assuming your backend uses port 5000)
 EXPOSE 3000
