--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,7 @@ jobs:
           docker push ${{ secrets.DOCKER_USERNAME }}/backendimage
 
       - name: Build and push frontend image
-        working-directory: ../frontend
+        working-directory: frontend
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend .
           docker push ${{ secrets.DOCKER_USERNAME }}/frontend
