--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -1,4 +1,5 @@
 name: Node.js CI
+
 on:
   push:
     branches: ["main"]
@@ -8,30 +9,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend/
-    strategy:
-      matrix:
-        node-version: [20.x]
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependency-path: "./backend/package-lock.json"
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD }}
+
       - name: Build and push backend image
         working-directory: backend
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/backendimage
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/backendimage .
           docker push ${{ secrets.DOCKER_USERNAME }}/backendimage
+
       - name: Build and push frontend image
-        working-directory: frontend
+        working-directory: ../frontend
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend 
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend .
           docker push ${{ secrets.DOCKER_USERNAME }}/frontend
